# stability-sdk

./: .gitignore  .gitmodules  LICENSE  Pepe sushi  Procfile  README.md  __init__.py  client.py  pyproject.toml  requirements.txt  sendToAirtable.py  setup.py  tests  update_interfaces.sh  uploadToS3.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: devcontainer.yml  publish-to-pypi.yml  publish-to-pypi.yml.back  unit_testing.yaml  update-interfaces.yml
interfaces/gooseai/generation/: generation_pb2_grpc.py
nbs/: A_B.ipynb  Fine_Tuning_REST_API_External_Test.ipynb  Fine_tuning_SDK_external_test.ipynb  Quick_REST_API_DEMO.ipynb  Stable_3D_API.ipynb  Stable_Audio_API.ipynb  Stable_Fast_3D_API.ipynb  animation.ipynb  animation_gradio.ipynb  demo.ipynb  demo_colab-INTERFACE.ipynb  demo_colab.ipynb  finetune.ipynb  inpaint.ipynb  sagemaker-stability-sdk.ipynb  sdxl-jumpstart.ipynb  stable_video_v1_REST_API_alpha.ipynb
src/: generation_A stunning house._1665792853_1.pb.json
src/js/: generation_pb.d.ts  generation_pb.js  generation_pb_service.d.ts  generation_pb_service.js
src/proto/: generation.proto  tensors.proto
src/ruby/: README.md
src/stability_sdk/: __init__.py  __main__.py  animation.py  animation_ui.py  api.py  client.py  finetune.py  matrix.py  utils.py
src/stability_sdk/interfaces/gooseai/generation/: generation_pb2.py  generation_pb2_grpc.py  tensors_pb2.py
src/stability_sdk/templates/: prompt_form.html
src/stability_sdk_sagemaker/: README.md  model.py  models.py  predictor.py
tests/: conftest.py  specs.md  test_animator.py  test_api.py  test_chains.py  test_client.py  test_utils.py
