[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stability-sdk"
dynamic = ["version"]
description = "Python SDK for interacting with Stability AI APIs"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Stability AI", email = "support@stability.ai" },
]
maintainers = [
    { name = "Stability AI", email = "support@stability.ai" },
]
keywords = []
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Topic :: Artistic Software",
    "Topic :: Education",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Topic :: Multimedia :: Graphics :: Editors :: Raster-Based",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "Pillow",    
    "protobuf>=3.19,<5.0",
    "pydantic>=1.9.2,<2.0",
    "python-dotenv",    
    "grpcio>=1.45.0",
]


[project.optional-dependencies]
sagemaker = [
    "protobuf>=3.19,<4.0",
    "sagemaker>=2.112.2",
]

[project.urls]
Download = "https://github.com/Stability-AI/stability-sdk/"
Homepage = "https://beta.dreamstudio.ai/"

[tool.hatch.version]
path = "src/stability_sdk/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/stability_sdk",
    "src/stability_sdk_sagemaker",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.hatch.envs.default]
python = "3.9"
packages = ["sagemaker"]

[tool.hatch.envs.test]
detached = false
dependencies = [    
    "coverage[toml]",
    "grpcio-testing",
    "pytest",
    "pytest-cov",    
]

[[tool.hatch.envs.test.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[[tool.hatch.envs.test.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]
features = ["sagemaker"]


[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests --ignore=src/stability_sdk/interfaces"
run = "run-coverage --no-cov"

[tool.hatch.envs.style]
detached = true
dependencies = [
  "flake8",
  "black",
  "isort",
]
[tool.hatch.envs.style.scripts]
check = [
  "flake8 .",
  "black --check --diff .",
  "isort --check-only --diff .",
]
fmt = [
  "isort .",
  "black .",
  "check",
]